# BUGINE

./: CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  CMakeLists_rendering.txt
core/examples/: ai_profile.json  network_demo.cpp  physics_demo.cpp
core/include/: performance_monitoring.h  physics_core.h
core/include/ai_core/: ai_config.h  ai_core.h  ai_debugger.h  behavior_tree.h  communication_system.h  control_context.h  decision_engine.h  decision_engine_stub.h  deterministic_rng.h  dynamic_modifiers.h  fallback_chain.h  fatigue_stress_system.h  formation_system.h  micro_network.h  neural_adapter.h  pathfinding.h  perception_component.h  perception_system.h  profile_manager.h  replay_player.h  replay_recorder.h  replay_types.h  spatial_grid.h  suppression_system.h  tactical_decision.h  tactical_network.h  tick_budget.h  tick_budget_enforcer.h
core/include/common/: event_bus.h
core/include/ecs/: component_pool.h  ecs.h  entity_manager.h  serialization.h  system.h
core/include/network_core/: network_core.h
core/include/physics_core/: acoustics_system.h  armor_materials.h  async_bvh_builder.h  ballistics_system.h  collision_system.h  constraint_system.h  crew_damage_system.h  damage_system.h  dem_system.h  destruction_system.h  environment_system.h  flight_dynamics.h  hybrid_precision.h  integrators.h  lbm_fluid_system.h  local_coordinate_frame.h  matter_systems.h  physics_body.h  physics_container.h  physics_core.h  physics_core_c_api.h  physics_thread_pool.h  profile_macros.h  projectile_properties.h  repair_system.h  sdf_collision_shape.h  secondary_effects_system.h  simd_config.h  simd_processor.h  soft_body_system.h  spatial_hash.h  sph_boundary_system.h  sph_system.h  terrain_system.h  thermal_system.h  types.h  vehicle_component.h  world_space_manager.h
core/include/rendering_engine/: model_system.h  render_pipeline_manager.h  rendering_engine.h  resource_management.h  test_utils.h  types.h
core/include/utility/: job_system.h
core/shaders/common/: lighting.glsl  matrices.glsl
core/shaders/deferred/: gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  tonemap.frag
core/src/: fallback_chain.cpp  performance_monitoring.cpp
core/src/ai_core/: ai_debugger.cpp  behavior_tree.cpp  communication_system.cpp  decision_engine.cpp  decision_engine_stub.cpp  dynamic_modifiers.cpp  fatigue_stress_system.cpp  formation_system.cpp  pathfinding.cpp  perception_system.cpp  replay_player.cpp  replay_recorder.cpp  replay_types.cpp  spatial_grid.cpp  suppression_system.cpp  tactical_decision.cpp  tactical_network.cpp  tick_budget.cpp
core/src/ecs/: ecs.cpp
core/src/network_core/: network_core.cpp
core/src/physics_core/: acoustics_system.cpp  armor_materials.cpp  async_bvh_builder.cpp  ballistics_system.cpp  collision_system.cpp  constraint_system.cpp  crew_damage.cpp  damage_system.cpp  dem_system.cpp  destruction_system.cpp  environment_system.cpp  flight_dynamics.cpp  fluid_system.cpp  gas_system.cpp  hybrid_precision.cpp  lbm_fluid_system.cpp  local_coordinate_frame.cpp  physics_body.cpp  physics_container.cpp  physics_core.cpp  physics_core_c_api.cpp  physics_thread_pool.cpp  profile_macros.cpp  projectile_properties.cpp  repair_system.cpp  rigid_body_system.cpp  rk4_integrator.cpp  sdf_collision_shape.cpp  secondary_effects.cpp  simd_processor.cpp  soft_body_system.cpp  spatial_hash.cpp  sph_boundary_system.cpp  sph_system.cpp  terrain_system.cpp  thermal_system.cpp  verlet_integrator.cpp  world_space_manager.cpp
core/src/rendering_engine/: model_system.cpp  render_pipeline_manager.cpp  rendering_engine.cpp
core/tests/: CMakeLists.txt  test_ballistics_formulas.cpp  test_ballistics_system.cpp  test_ccd.cpp  test_collision_system.cpp  test_constraint_softbody.cpp  test_damage_system.cpp  test_dem_system.cpp  test_entity_component_system.cpp  test_environment_integration.cpp  test_environment_system.cpp  test_flight_dynamics.cpp  test_hybrid_precision.cpp  test_integrators.cpp  test_matter_systems.cpp  test_model_system.cpp  test_network_core.cpp  test_performance_monitoring.cpp  test_physics_container.cpp  test_repair_system.cpp  test_resource_manager.cpp  test_simd.cpp  test_sph_boundaries.cpp  test_types.cpp  test_world_space.cpp
core/tests/unit/: perception_system_test.cpp  phase4_tests.h  test_ai_system.cpp  test_replay_system.cpp
modules/assembly_system/: CMakeLists.txt
modules/assembly_system/include/: assembly_system.h
modules/assembly_system/src/: assembly_system.cpp  blueprint_compiler.cpp  constraint_validator.cpp  ptu_validator.cpp  universal_assembly_engine.cpp  vehicle_assembly.cpp
modules/combat_systems/: CMakeLists.txt
modules/combat_systems/include/: combat_systems.h
modules/combat_systems/src/: active_protection.cpp  combat_systems.cpp  electronic_warfare.cpp  nbc_warfare.cpp  thermal_vision.cpp
modules/electrical_system/: CMakeLists.txt  README.md
modules/electrical_system/include/: electrical_system.h
modules/electrical_system/src/: electrical_system.cpp
modules/electrical_system/tests/: CMakeLists.txt  electrical_system_test.cpp
modules/historical_vehicle_system/: CMakeLists.txt
modules/historical_vehicle_system/src/: historical_vehicle_system.cpp
modules/medical_system/: CMakeLists.txt
modules/medical_system/include/: medical_system.h
modules/medical_system/src/: crew_status.cpp  injury_simulation.cpp  medical_system.cpp  treatment_system.cpp
modules/model_generation_system/: CMakeLists.txt  README.md  demo.cpp
modules/model_generation_system/include/: blueprint_engine.h  model_generation_system.h  procedural_geometry_generator.h  texture_synthesis_system.h
modules/procedural_armor_factory/: CMakeLists.txt
modules/ptu_system/: CMakeLists.txt
modules/ui/src/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/performance/: CMakeLists.txt  performance_test.cpp
tests/unit/: CMakeLists.txt  test_decision_engine.cpp  test_dynamic_modifiers.cpp  test_phase3_tactical.cpp
tools/: CMakeLists.txt
tools/code_quality/: CMakeLists.txt  README.md
tools/editor/: CMakeLists.txt
(+158 files in other folders)
